# OpenWarClient

./: .gitignore  CMakeLists.txt  project.vim  readme.txt  todo.txt  war_data.info
data/zone_file_lists/: ellyrion.txt  gates_of_ekrund.txt  mourkain_temple.txt  nordenwatch.txt  norsca.txt  troll_country.txt
src/client/: CMakeLists.txt  CMakeLists.txt~  OWClient.cpp  OWClient.cpp~  OWClient.h  error_codes.h  login_sequence.cpp  login_sequence.cpp~  login_sequence.h  main.cpp
src/client/common/: macros.h  marshalling.cpp  marshalling.h
src/client/crypt/: sha256.h
src/client/data/: .MYPFileDatabase.cpp.swp  .MYPFileDatabase.h.swp  MYPFileDatabase.cpp
src/client/io/: .hash.h.swp  Log.cpp  Log.h  MYPFileDatabase.cpp  MYPFileDatabase.cpp~  MYPFileDatabase.h  MYPReader.cpp  MYPReader.cpp~  MYPReader.h  Properties.cpp  Properties.h  hash.cpp  hash.h  io_error_codes.h
src/client/network/: NetworkSocket.cpp  NetworkSocket.cpp~  NetworkSocket.h  NetworkSocket.h~  network_error_codes.h  op_codes.h
src/client/world/: CZone.cpp  CZone.h
src/irrlicht/: CBurningShader_Raster_Reference.cpp  CColladaFileLoader.cpp  CColorConverter.cpp  CImageLoaderBMP.cpp~  CImageLoaderPCX.cpp  CImageLoaderWAL.cpp  CLimitReadFile.cpp  CLimitReadFile.h  CLimitReadFile.h~  CMYPFileDatabase.cpp  CMYPFileDatabase.cpp~  CMYPFileDatabase.h  CMYPReader.cpp  CMYPReader.cpp~  CMYPReader.h  CMakeLists.txt  CMakeLists.txt~  CMemoryFile.cpp  CMemoryFile.cpp~  CMemoryFile.h  COBJMeshFileLoader.cpp  CProperties.cpp  CProperties.h  CReadFile.cpp  CReadFile.cpp~  CReadFile.h  CReadFile.h~  CSceneManager.cpp  CSceneManager.h  CSoftwareDriver2.cpp  CSplatterTerrainSceneNode.cpp  CSplatterTerrainSceneNode.h  CSplatterTerrainTriangleSelector.cpp  CSplatterTerrainTriangleSelector.h  CTerrainSceneNode.cpp  CTerrainSceneNode.cpp~  CTerrainSceneNode.h  CWriteFile.cpp  CWriteFile.h  CXMeshFileLoader.cpp  (+3 more)
src/irrlicht/include/: ETerrainElements.h  IBoneSceneNode.h  IFileArchive.h  IMeshManipulator.h  IReadFile.h  IReadFile.h~  ISceneManager.h  ISplatterTerrainSceneNode.h  ITerrainSceneNode.h  ITerrainSceneNode.h~  IWriteFile.h  IrrCompileConfig.h  irrlicht.h  irrpack.h~  irrunpack.h
src/tools/mypextr/: CMakeLists.txt  MYPFile.cpp  MYPFile.h  file_helpers.h  file_structs.h  main.cpp
src/tools/myptools/: .CMakeLists.txt.swp  .MYPFile.cpp.swp  .MYPFile.h.swp  .myphash_main.cpp.swp  .mypname_main.cpp.swp  .names.cpp.swp  .names.h.swp  CMakeLists.txt  CMakeLists.txt~  MYPFile.cpp  MYPFile.h  hash.h  mypexptr_main.cpp  mypexptr_main.cpp~  myphash_main.cpp  mypname_main.cpp  names.cpp  names.h
